@@ -6,6 +6,7 @@
 #   gem install postgres-pr
 development:
   adapter: postgresql
+  encoding: unicode
   database: <%= app_name %>_development
   username: <%= app_name %>
   password:
@@ -33,12 +34,14 @@ development:
 # Do not set this db to the same as development or production.
 test:
   adapter: postgresql
+  encoding: unicode
   database: <%= app_name %>_test
   username: <%= app_name %>
   password:
 
 production:
   adapter: postgresql
+  encoding: unicode
   database: <%= app_name %>_production
   username: <%= app_name %>
   password:
